[project]
name = "vector-agent-sdk"
version = "0.1.0"
description = "Python Agent SDK for Vector blockchain — PyCardano + Ogmios"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pycardano>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vector_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
